# optimal-branching

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: mock_problem.rs
src/: branch.rs  branching_table.rs  clause.rs  error.rs  greedymerge.rs  lib.rs  mock.rs  set_cover.rs  solver.rs
tests/: fixtures.rs
tests/data/jl/: branching_tables.json  clause_ops.json  complexity_bv.json  minimize_gamma.json  set_cover.json
