[package]
name = "optimal-branching"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generic branch-and-reduce framework with set-cover-driven optimal branching rules"
readme = "README.md"
repository = "https://github.com/OptimalBranching/optimal-branching"
keywords = ["branch-and-reduce", "combinatorial-optimization", "set-cover"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
good_lp = { version = "1", default-features = false, features = ["highs"] }
num-traits = "0.2"
thiserror = "2"
rand = "0.9"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
